--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: ThrowableTNT
 api: 3.0.0
-main: Vecnavium\ThrowableTNT\Main
+main: Vecnavium\ThrowableTNT\ThrowableTNT
 version: 1.0.0
 author: Vecnavium
 description: A PocketMine-MP Plugin that allows you to throw TNT
