--- a/plugin.yml
+++ b/plugin.yml
@@ -2,7 +2,5 @@ name: LaunchableTNT
 api: 4.0.0
 main: Vecnavium\LaunchableTNT\LaunchableTNT
 version: 1.0.2
-author: 
-  - Vecnavium
-  - YTBJero
+author: Vecnavium
 description: A PocketMine-MP Plugin that allows you to throw TNT
