--- a/.poggit.yml
+++ b/.poggit.yml
@@ -1,7 +1,7 @@
 --- # Poggit-CI Manifest. Open the CI at https://poggit.pmmp.io/ci/Vecnavium/LaunchableTNT
 build-by-default: true
 branches:
-- PM4
+- master
 projects:
   LaunchableTNT:
     path: ""
